--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "sh ./deploy.sh",
     "dev": "vuepress dev src ",
     "build": "vuepress build src ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0",
+    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.0",
+    "@vuepress/plugin-notification": "^1.0.0-alpha.5",
+    "@vuepress/plugin-pwa": "^1.0.0-alpha.0"
+  }
 }
