--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "sh ./deploy.sh",
+    "deploy": "sh bin/deploy.sh",
     "dev": "vuepress dev src ",
     "build": "vuepress build src ",
     "test": "echo \"Error: no test specified\" && exit 1"
