--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "deploy": "sh bin/deploy.sh",
     "dev": "vuepress dev src ",
     "build": "vuepress build src ",
+    "cover": "node bin/genCover.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
