--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0",
-    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.0",
+  },
+  "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.48",
+    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.48",
     "@vuepress/plugin-notification": "^1.0.0-alpha.5",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.0"
+    "@vuepress/plugin-nprogress": "^1.0.0-alpha.48",
+    "@vuepress/plugin-pagination": "^1.0.0-alpha.48",
+    "@vuepress/plugin-register-components": "^1.0.0-alpha.48"
   }
 }
