--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deploy": "sh bin/deploy.sh",
-    "dev": "vuepress dev src ",
-    "build": "vuepress build src ",
+    "dev": "vuepress dev doc ",
+    "build": "vuepress build doc ",
     "cover": "node bin/genCover.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +19,7 @@
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.48",
     "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.48",
     "@vuepress/plugin-notification": "^1.0.0-alpha.5",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.0"
+    "@vuepress/plugin-pwa": "^1.0.0-alpha.0",
     "@vuepress/plugin-nprogress": "^1.0.0-alpha.48",
     "@vuepress/plugin-pagination": "^1.0.0-alpha.48",
     "@vuepress/plugin-register-components": "^1.0.0-alpha.48"
