--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0"
+  },
   "devDependencies": {
-    "vuepress": "next",
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.48",
     "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.48",
     "@vuepress/plugin-notification": "^1.0.0-alpha.42",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.48",
     "@vuepress/plugin-nprogress": "^1.0.0-alpha.48",
     "@vuepress/plugin-pagination": "^1.0.0-alpha.48",
-    "@vuepress/plugin-register-components": "^1.0.0-alpha.48"
+    "@vuepress/plugin-pwa": "^1.0.0-alpha.48",
+    "@vuepress/plugin-register-components": "^1.0.0-alpha.48",
+    "vuepress": "next"
   }
 }
