--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gql-loader": "^1.0.0",
+    "graphql": "^14.3.1",
+    "graphql-import-loader": "^0.2.1",
+    "graphql-tag": "^2.10.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0"
   },
