chore: update depends

--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "gql-loader": "^1.0.0",
-    "graphql": "^14.3.1",
+    "graphql": "^14.5.8",
     "graphql-import-loader": "^0.2.1",
     "graphql-tag": "^2.10.1",
-    "less": "^3.9.0",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0"
   },
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.48",
-    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.48",
+    "@vuepress/plugin-back-to-top": "^1.2.0",
+    "@vuepress/plugin-medium-zoom": "^1.2.0",
     "@vuepress/plugin-notification": "^1.0.0-alpha.42",
-    "@vuepress/plugin-nprogress": "^1.0.0-alpha.48",
+    "@vuepress/plugin-nprogress": "^1.2.0",
     "@vuepress/plugin-pagination": "^1.0.0-alpha.48",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.48",
-    "@vuepress/plugin-register-components": "^1.0.0-alpha.48",
+    "@vuepress/plugin-pwa": "^1.2.0",
+    "@vuepress/plugin-register-components": "^1.2.0",
     "vuepress": "next"
   }
 }
