--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "squarify": "^1.1.0",
     "vue-grid-layout": "^2.3.6"
   },
   "devDependencies": {
