--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "serialize-javascript": "^2",
     "squarify": "^1.1.0",
-    "vue-grid-layout": "^2.3.6"
+    "vue-grid-layout": "^2.3.7"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.2.0",
@@ -35,6 +36,7 @@
     "@vuepress/plugin-pwa": "^1.2.0",
     "@vuepress/plugin-register-components": "^1.2.0",
     "vuepress": "next",
+    "vuepress-plugin-container": "^2.1.2",
     "vuepress-plugin-flowchart": "^1.4.3"
   }
 }
